archive/romm/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: romm
  namespace: romm
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik-internal
  rules:
    - host: romm.local.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: romm
                port:
                  number: 8080
